# codeAtlas

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  visualize.py
code_atlas/: api.py  cli.py
code_atlas/core/: config.py  models.py
code_atlas/graph/: builder.py  deadcodeanalysis.py  pipeline.py  schema.py  store.py  visualiser.py
code_atlas/ingestion/: git_cloner.py  hasher.py  language_detector.py  manifest_store.py  pipeline.py  scanner.py
code_atlas/llm/: answer_generator.py  llm_query.py  ollama_llm.py  prompt_builder.py
code_atlas/parsing/: grammar_loader.py  ir_store.py  pipeline.py
code_atlas/parsing/visitors/: __init__.py  base.py  generic_visitor.py  go_visitor.py  javascript_visitor.py  python_visitor.py
code_atlas/pipeline/: main_pipeline.py
code_atlas/query/: langchain_rag.py  rag_query.py
code_atlas/retrieval/: build_documents.py  build_index.py  embeddings.py  graph_expand.py  load_graph.py  node_to_text.py  store_embeddings.py  vector_search.py
tests/phase1/: test_phase1.py
tests/phase2/: test_phase2.py
tests/phase3/: test_cli_help.py  test_graph_builder.py
tests/phase4/: test_api.py  test_build_documents.py  test_embeddings.py  test_error_handling.py  test_full_pipeline.py  test_prompt_builder.py  test_rag_pipeline.py  test_vector_search_mock.py
