[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "code-atlas"
version = "0.1.0"
description = "Structure-aware, graph-augmented intelligent codebase assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # ── Phase 1: Ingestion ─────────────────────────────────────────────────────
    "dulwich>=0.21",            # pure-Python git clone / fetch (no system git needed)
    "pydantic>=2.5",            # IR schema validation and serialisation
    "pathspec>=0.12",

    # ── Phase 2: Parsing ────────
    "tree-sitter>=0.21",        
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-java>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-rust>=0.21",

    # ── Phase 3: Graph ─────────────────────────────────────────────────────────
    "networkx>=3.2",

    # ── Phase 4: Retrieval ─────────────────────────────────────────────────────
    "qdrant-client>=1.7",
    "sentence-transformers>=2.6",
    "langchain>=0.2",
    "langchain-community>=0.2",

    # ── Phase 5: API ───────────────────────────────────────────────────────────
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",

    # ── Utilities ──────────────────────────────────────────────────────────────
    "rich>=13",               
    "typer>=0.12",            
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
code-atlas = "code_atlas.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_atlas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true